# Google-Prompt-Wars---Election-System

./: .firebaserc  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  check_syntax.py  docker-compose.yml  firebase.json  fix.py  fix_indent.py  missing_tables.sql  revert.py
backend/: .coverage  .env.example  .flake8  Dockerfile  app.py  config.py  entrypoint.sh  extensions.py  proxy.conf  pyproject.toml  pytest.ini  requirements.txt
backend/agents/: debate_moderator.py  election_analyst.py  fact_checker.py  incident_responder.py  orchestrator.py
backend/db/: __init__.py  connection.py  migrate_users.py  migrate_users.sql  schema.sql  seed.py  seed_content.py
backend/middleware/: __init__.py  security_middleware.py
backend/models/: __init__.py  booth.py  incident.py
backend/routes/: __init__.py  analytics_routes.py  auth_routes.py  battle_routes.py  booth_routes.py  chat_routes.py  content_routes.py  database_routes.py  gcloud_ai_routes.py  incident_routes.py  simulation_routes.py
backend/services/: __init__.py  email_service.py  firebase_service.py  gcloud_ai_service.py  gcloud_logging_service.py  gcloud_secret_service.py  gcloud_vision_service.py  gcs_service.py  gemini_service.py  nlp_service.py  security.py  translation_service.py
backend/simulation/: __init__.py  election_clock.py  engine.py  incident_injector.py  queue_dynamics.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_content_routes.py  test_gcloud_ai.py  test_google_services.py  test_models.py  test_security.py  test_security_advanced.py  (+3 more)
(+23 files in other folders)
